--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\phapl\\AppData\\Roaming\\NetBeans\\21\\tomcat90.properties
-j2ee.server.home=D:/Download file/apache-tomcat-9.0.91
-j2ee.server.instance=tomcat90:home=D:\\Download file\\apache-tomcat-9.0.91
+deploy.ant.properties.file=C:\\Users\\phapl\\AppData\\Roaming\\NetBeans\\21\\tomcat80.properties
+j2ee.server.home=F:/Download/apache-tomcat-8.5.100
+j2ee.server.instance=tomcat80:home=F:\\Download\\apache-tomcat-8.5.100
 user.properties.file=C:\\Users\\phapl\\AppData\\Roaming\\NetBeans\\21\\build.properties
